# genpack-install-gui

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: tui-fallback-consideration.md
src/: backend.rs  main.rs
src/backend/: mock.rs  real.rs
tools/: vm.py
translations/ja/LC_MESSAGES/: genpack-install-gui.po
ui/: main.slint
