[package]
name = "genpack-install-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = { version = "1", features = ["backend-winit", "backend-linuxkms"] }
# アプリ内ターミナル（生KMSでも動くよう RGBA→slint::Image で描画する別クレート）。
# タグ未発行のため rev で固定し、Cargo.lock をコミットして再現性を担保する。
slint-terminal = { git = "https://github.com/wbrxcorp/slint-terminal", rev = "dc3c008114a1aefb863fa84186b266405dd3a395" }

[build-dependencies]
slint-build = "1"

[features]
# UI開発用モック。root権限の必要な実処理をダミーに差し替える。
#   cargo run --features mock
mock = []

[[bin]]
name = "genpack-install-gui"
path = "src/main.rs"
